# Phantom

./: .gitignore  CMakeLists.txt  Makefile  gradlew.bat  idea.md  pack.sh  settings.gradle.kts  whatsdone.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/phantom/ipc/: DaemonApi.kt
app/src/main/kotlin/dev/phantom/ui/: MainViewModel.kt
app/src/main/kotlin/dev/phantom/ui/components/: TrafficAdapter.kt
app/src/main/kotlin/dev/phantom/ui/screens/: MainActivity.kt  TrafficDetailActivity.kt
app/src/main/res/drawable/: bg_patched.xml  dot_green.xml  dot_red.xml  ic_connected.xml  ic_disconnected.xml  ic_launcher.xml  ic_patch.xml  ic_scan.xml  ic_search.xml
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  dialog_patch.xml  item_traffic.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
core/: jni_helper.c  test_tramp.c
core/bypass/: integrity.c  root_hide.c  ssl_unpin.c
core/dex/: dumper.c
core/hook/: lsplant.h  lsplant_stub.c  shadowhook.h  shadowhook_stub.c  trampoline.c  trampoline.h
core/hook/arm32/: trampoline.s
core/hook/arm64/: trampoline.s
core/ipc/: ringbuf.c  ringbuf.h
core/ipc/arm32/: atomic.s
core/ipc/arm64/: atomic.s
core/js/: api_intercept.c  api_java.c  api_memory.c  api_network.c  api_ph.c  api_rhino.c  api_rhino.h  hello.js  runtime.c  runtime.h
core/js/quickjs/: dtoa.c  quickjs.c
core/mitm/: auto_detect.c  auto_detect.h  field_dict.c  field_dict.h  http2_parse.c  http2_parse.h  intercept_engine.c  intercept_engine.h  ssl_tap.c  ssl_tap.h
core/scan/arm32/: neon_scan.s
core/scan/arm64/: neon_scan.s
go/: go.mod
go/bootstrap/: main.go
go/bundler/: main.go
go/daemon/: main.go
go/hub/: main.go
go/lsp/: main.go
go/mirrors/: main.go
go/updater/: main.go
java/: build.sh
java/lib/: README.md
java/src/dev/phantom/: PhantomAgent.java
kmod/: Makefile
kmod/src/: phantom_kmod.c
module/: Cargo.toml  build.rs
module/.cargo/: config.toml
module/src/: ffi.rs  ipc.rs  lib.rs  process.rs  scripts.rs  zygisk.rs
scripts/bypass/: integrity.js  root.js  ssl.js
scripts/trace/: methods.js  stack.js
scripts/utils/: hex.js  proc.js
shell/: prompt.c  prompt.h  prompt.toml.example  psh.c
