[package]
name    = "phantom-module"
version = "0.1.0"
edition = "2021"

[lib]
name      = "phantom"
crate-type = ["cdylib"]   # produces phantom.so loaded by Zygisk

[dependencies]
libc = "0.2"
log  = "0.4"

[build-dependencies]
cc = "=1.0.99"   # 1.2.x pulls find_msvc_tools which breaks on Windows GNU host

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
